Add work history content and style

--- a/resume.html
+++ b/resume.html
@@ -45,15 +45,32 @@
     </header>
     <section class="container-fluid">
     <div class="row">
-        <div class="col-md-4 bg-color-personal-info section-column">
+        <div class="col-md-4 bg-color-work-history section-column">
             <div class="row">
                 <div class="col-12">
-                    <h3 class="section-heading uppercase">
+                    <h3 class="history-heading uppercase">
                         Work History
                     </h3>
                 </div>
             </div>
-            
+            <div class="history-items"></div>
+                <div class="timeline-item" data-dates="08/2022 - 01/2023">
+                    <h4>Code Institute (school)</h4>
+                    <p>Full Stack Developer (student)</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2018 - 09/2022">
+                    <h4>Mio Furnitures</h4>
+                    <p>Claims</p>
+                </div>
+                <div class="timeline-item" data-dates="08/2016 - 09/2018">
+                    <h4>Viva Media</h4>
+                    <p>Account Manager - Digital Marketing</p>
+                </div>
+                <div class="timeline-item" data-dates="02/2014 - 08/2016">
+                    <h4>Kompaniet</h4>
+                    <p>Sales</p>
+                </div>
+            </div>        
         </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
             <div class="row">
