--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                     </h3>
                 </div>
             </div>
-            <div class="history-items"></div>
+            <div class="history-items">
                 <div class="timeline-item" data-dates="08/2022 - 01/2023">
                     <h4>Code Institute (school)</h4>
                     <p>Full Stack Developer (student)</p>
@@ -111,35 +111,35 @@
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
                         style="width:90%;">
-                        <span class="sr-only">90% complete</span>
+                            <span class="sr-only">90% complete</span>
                         </div>
                         <span class="progress-type">HTML / HTML5</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
                         style="width:80%;">
-                        <span class="sr-only">80% complete</span>
+                            <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">CSS / CSS3</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
                         style="width:70%;">
-                        <span class="sr-only">70% complete</span>
+                            <span class="sr-only">70% complete</span>
                         </div>
                         <span class="progress-type">JavaScript / jQuery</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
                         style="width:80%;">
-                        <span class="sr-only">80% complete</span>
+                            <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">Django / Python</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
                         style="width:80%;">
-                        <span class="sr-only">80% complete</span>
+                            <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">SQL / NoSQL</span>
                     </div>
