connect email to contactpage

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,16 @@
     <script src="https://kit.fontawesome.com/55701b98dc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
-    <title>Calle</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("et1Iw3dNmBedOgcgI");
+      emailjs.send('gmail', 'calle1', {name: "Hanna", notes: "The project that I want is..."});
+   })();
+</script>
+    <title>Calle - awesome Developer</title>
 </head>
 <body>
     <header>
