--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/55701b98dc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
-    <title>Calle</title>
+    <title>Calle - Hire Developer</title>
 </head>
 <body>
     <header>
