--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
 <script type="text/javascript">
    (function(){
       emailjs.init("et1Iw3dNmBedOgcgI");
-      emailjs.send('gmail', 'calle1', {name: "Hanna", notes: "The project that I want is..."});
    })();
 </script>
     <title>Calle - awesome Developer</title>
@@ -64,7 +63,7 @@
                 <h5 class="uppercase text-center">Well then... Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendEmail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
                         required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
@@ -135,6 +134,7 @@
         </div>
 
     </footer>
+    <script src="./assets/js/sendEmail.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </html>
